

2023.8.28

	+	tools/libs/encodec.py created.


2023.8.24

	+	tools/spartitoSolver.ts created.


2023.8.23

	+	spartitoConstructor.ts: tags on spartito appended.


2023.7.25

	+	tools/midiIndexing.ts created.

	+	tools/libs/midiHash.ts created.


2023.7.22

	+	tools/workStat.ts created.


2023.7.19

	+	spartitoConstructor.ts created.

	+	tools/scoreVision.ts created.


2023.7.18

	+	tools/scoreInit.ts created.


2023.7.17

	+	tools/ocr.ts created.


2023.7.14

	+	tools/pageReader.ts created.


2023.7.13

	+	tools/copyMIDI.ts created.

	+	spectrumPlotter.py created.


2023.7.12

	+	pianoTranscriber.py created.


2023.7.11

	+	tools/audioSplitter.ts created.

	+	tools/dataInit.ts created.

	+	prisma test case added.

	|	Project imslp-mining setup.


------------------------------------------------------- imslp-mining ChangeLog -------------------------------------------------------