@@ -46,3 +46,4 @@ PROCESS_PREDICTOR_CMD=python
 
 ENCODEC_PRETRAINED=facebook/encodec_24khz
 ENCODEC_BANDWIDTH=24
+ENCODEC_BATCHSIZE=640
