@@ -77,6 +77,50 @@
     "\n",
     "ipd.Audio(audio1[0][0], rate=sampling_rate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.libs.rvqFormat import RVQFile\n",
+    "\n",
+    "\n",
+    "file = RVQFile.fromAudio(audio, sr)\n",
+    "\n",
+    "file.save(open('./test.rvq', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import env\n",
+    "from tools.libs.rvqFormat import RVQFile\n",
+    "\n",
+    "\n",
+    "with open('./test.rvq', 'rb') as f:\n",
+    "\tfile1 = RVQFile.fromFile(f)\n",
+    "\n",
+    "\taudio1 = file1.decodeToAudio()\n",
+    "\n",
+    "audio1.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import IPython.display as ipd\n",
+    "\n",
+    "ipd.Audio(audio1, rate=file1.sampling_rate)"
+   ]
   }
  ],
  "metadata": {
