@@ -2,6 +2,8 @@
 
 2023.8.28
 
+	+	tools/libs/rvqFormat.py created.
+
 	+	tools/libs/encodec.py created.
 
 
